# DA33_semantic_labelling_model

./: .gitignore  README.md  pyproject.toml
data/processed/high_school_knowledge/: vietjack_hoa-hoc-10-kn.json  vietjack_hoa-hoc-11-kn.json  vietjack_hoa-hoc-12-kn.json  vietjack_sinh-10-kn.json  vietjack_sinh-11-kn.json  vietjack_sinh-hoc-12-kn.json  vietjack_vat-li-10-kn.json  vietjack_vat-li-11-kn.json  vietjack_vat-li-12-kn.json
data/processed/high_school_knowledge_embeddings/: high_school_knowledge.faiss  high_school_knowledge.json
notebooks/: text_embedding.py  text_searching.py
src/da33_labelling_project/: __init__.py  config.py  embedding_process.py  utils.py
